--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.14.2",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
